@@ -1,5 +1,9 @@
 2003-10-23  David Malcolm <david@davemalcolm.demon.co.uk>
 
+	* cong-node.c, cong-node.h, cong-range.c, cong-range.h, xmledit.c
+
+	Bulletproofing for clipboard operations
+	
 	* cong-command.c, cong-editor-node-text.c, cong-selection.h
 
 	Fixed warnings
